# SkUuid

./: CMakeLists.txt  README.md
cmake/: module.cmake  sklib_base.cmake
examples/: example.cpp
include/sklib/: uuid.hpp
install/: CMakeLists.txt
src/: CMakeLists.txt  linux.cpp  macos.cpp  win.cpp
test/: CMakeLists.txt  main.cpp
